src/main/java/com/parser/TraductorCParser.java
// Generated from TraductorC.g4 by ANTLR 4.7.2
package com.parser;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class TraductorCParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, INT=3, VOID=4, MAIN=5, PRINT=6, FOR=7, IF=8, ELSE=9, TRUE=10, 
		FALSE=11, OR=12, AND=13, IGUALACION=14, DIFERENTE=15, MAYOR=16, MENOR=17, 
		MAYORIGUAL=18, MENORIGUAL=19, IGUAL=20, POW=21, SQRT=22, SUM=23, RES=24, 
		MUL=25, DIV=26, PA=27, PC=28, LA=29, LC=30, COMMENT=31, COMMENTLINEA=32, 
		ID=33, NUMERO=34, STRING=35, WS=36;
	public static final int
		RULE_programa = 0, RULE_encabezado = 1, RULE_instrucciones = 2, RULE_declaracion = 3, 
		RULE_declaracion2 = 4, RULE_impresion2 = 5, RULE_impresion = 6, RULE_asignacion = 7, 
		RULE_ifCuck = 8, RULE_elseCuck = 9, RULE_elseifCuck = 10, RULE_forBasico = 11, 
		RULE_condicion = 12, RULE_expr = 13, RULE_tipo_dato = 14, RULE_incremento = 15;
	private static String[] makeRuleNames() {
		return new String[] {
			"programa", "encabezado", "instrucciones", "declaracion", "declaracion2", 
			"impresion2", "impresion", "asignacion", "ifCuck", "elseCuck", "elseifCuck", 
			"forBasico", "condicion", "expr", "tipo_dato", "incremento"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "';'", "'!'", "'dul'", "'papoi'", "'banana'", "'poopaye'", "'chasy'", 
			"'hana'", "'sae'", "'True'", "'False'", "'||'", "'&&'", "'=='", "'!='", 
			"'>'", "'<'", "'>='", "'<='", "'='", "'**'", "'*/'", "'+'", "'-'", "'*'", 
			"'/'", "'('", "')'", "'{'", "'}'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, "INT", "VOID", "MAIN", "PRINT", "FOR", "IF", "ELSE", 
			"TRUE", "FALSE", "OR", "AND", "IGUALACION", "DIFERENTE", "MAYOR", "MENOR", 
			"MAYORIGUAL", "MENORIGUAL", "IGUAL", "POW", "SQRT", "SUM", "RES", "MUL", 
			"DIV", "PA", "PC", "LA", "LC", "COMMENT", "COMMENTLINEA", "ID", "NUMERO", 
			"STRING", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "TraductorC.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public TraductorCParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ProgramaContext extends ParserRuleContext {
		public EncabezadoContext encabezado() {
			return getRuleContext(EncabezadoContext.class,0);
		}
		public TerminalNode LA() { return getToken(TraductorCParser.LA, 0); }
		public InstruccionesContext instrucciones() {
			return getRuleContext(InstruccionesContext.class,0);
		}
		public TerminalNode LC() { return getToken(TraductorCParser.LC, 0); }
		public ProgramaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_programa; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TraductorCVisitor ) return ((TraductorCVisitor<? extends T>)visitor).visitPrograma(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramaContext programa() throws RecognitionException {
		ProgramaContext _localctx = new ProgramaContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_programa);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(32);
			encabezado();
			setState(33);
			match(LA);
			setState(34);
			instrucciones();
			setState(35);
			match(LC);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class EncabezadoContext extends ParserRuleContext {
		public EncabezadoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_encabezado; }
	 
		public EncabezadoContext() { }
		public void copyFrom(EncabezadoContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class EncabechadContext extends EncabezadoContext {
		public TerminalNode VOID() { return getToken(TraductorCParser.VOID, 0); }
		public TerminalNode MAIN() { return getToken(TraductorCParser.MAIN, 0); }
		public TerminalNode PA() { return getToken(TraductorCParser.PA, 0); }
		public TerminalNode PC() { return getToken(TraductorCParser.PC, 0); }
		public EncabechadContext(EncabezadoContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TraductorCVisitor ) return ((TraductorCVisitor<? extends T>)visitor).visitEncabechad(this);
			else return visitor.visitChildren(this);
		}
	}

	public final EncabezadoContext encabezado() throws RecognitionException {
		EncabezadoContext _localctx = new EncabezadoContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_encabezado);
		try {
			_localctx = new EncabechadContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(37);
			match(VOID);
			setState(38);
			match(MAIN);
			setState(39);
			match(PA);
			setState(40);
			match(PC);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class InstruccionesContext extends ParserRuleContext {
		public List<AsignacionContext> asignacion() {
			return getRuleContexts(AsignacionContext.class);
		}
		public AsignacionContext asignacion(int i) {
			return getRuleContext(AsignacionContext.class,i);
		}
		public List<DeclaracionContext> declaracion() {
			return getRuleContexts(DeclaracionContext.class);
		}
		public DeclaracionContext declaracion(int i) {
			return getRuleContext(DeclaracionContext.class,i);
		}
		public List<Declaracion2Context> declaracion2() {
			return getRuleContexts(Declaracion2Context.class);
		}
		public Declaracion2Context declaracion2(int i) {
			return getRuleContext(Declaracion2Context.class,i);
		}
		public List<ImpresionContext> impresion() {
			return getRuleContexts(ImpresionContext.class);
		}
		public ImpresionContext impresion(int i) {
			return getRuleContext(ImpresionContext.class,i);
		}
		public List<Impresion2Context> impresion2() {
			return getRuleContexts(Impresion2Context.class);
		}
		public Impresion2Context impresion2(int i) {
			return getRuleContext(Impresion2Context.class,i);
		}
		public List<IfCuckContext> ifCuck() {
			return getRuleContexts(IfCuckContext.class);
		}
		public IfCuckContext ifCuck(int i) {
			return getRuleContext(IfCuckContext.class,i);
		}
		public List<ForBasicoContext> forBasico() {
			return getRuleContexts(ForBasicoContext.class);
		}
		public ForBasicoContext forBasico(int i) {
			return getRuleContext(ForBasicoContext.class,i);
		}
		public InstruccionesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_instrucciones; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TraductorCVisitor ) return ((TraductorCVisitor<? extends T>)visitor).visitInstrucciones(this);
			else return visitor.visitChildren(this);
		}
	}

	public final InstruccionesContext instrucciones() throws RecognitionException {
		InstruccionesContext _localctx = new InstruccionesContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_instrucciones);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(51);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << INT) | (1L << PRINT) | (1L << FOR) | (1L << IF) | (1L << ID))) != 0)) {
				{
				setState(49);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
				case 1:
					{
					setState(42);
					asignacion();
					}
					break;
				case 2:
					{
					setState(43);
					declaracion();
					}
					break;
				case 3:
					{
					setState(44);
					declaracion2();
					}
					break;
				case 4:
					{
					setState(45);
					impresion();
					}
					break;
				case 5:
					{
					setState(46);
					impresion2();
					}
					break;
				case 6:
					{
					setState(47);
					ifCuck();
					}
					break;
				case 7:
					{
					setState(48);
					forBasico();
					}
					break;
				}
				}
				setState(53);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DeclaracionContext extends ParserRuleContext {
		public DeclaracionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaracion; }
	 
		public DeclaracionContext() { }
		public void copyFrom(DeclaracionContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class DeclarachadContext extends DeclaracionContext {
		public Tipo_datoContext tipo_dato() {
			return getRuleContext(Tipo_datoContext.class,0);
		}
		public TerminalNode ID() { return getToken(TraductorCParser.ID, 0); }
		public DeclarachadContext(DeclaracionContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TraductorCVisitor ) return ((TraductorCVisitor<? extends T>)visitor).visitDeclarachad(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DeclaracionContext declaracion() throws RecognitionException {
		DeclaracionContext _localctx = new DeclaracionContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_declaracion);
		try {
			_localctx = new DeclarachadContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(54);
			tipo_dato();
			setState(55);
			match(ID);
			setState(56);
			match(T__0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Declaracion2Context extends ParserRuleContext {
		public Declaracion2Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaracion2; }
	 
		public Declaracion2Context() { }
		public void copyFrom(Declaracion2Context ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class Declarachad2Context extends Declaracion2Context {
		public Tipo_datoContext tipo_dato() {
			return getRuleContext(Tipo_datoContext.class,0);
		}
		public TerminalNode ID() { return getToken(TraductorCParser.ID, 0); }
		public TerminalNode IGUAL() { return getToken(TraductorCParser.IGUAL, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public Declarachad2Context(Declaracion2Context ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TraductorCVisitor ) return ((TraductorCVisitor<? extends T>)visitor).visitDeclarachad2(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Declaracion2Context declaracion2() throws RecognitionException {
		Declaracion2Context _localctx = new Declaracion2Context(_ctx, getState());
		enterRule(_localctx, 8, RULE_declaracion2);
		try {
			_localctx = new Declarachad2Context(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(58);
			tipo_dato();
			setState(59);
			match(ID);
			setState(60);
			match(IGUAL);
			setState(61);
			expr(0);
			setState(62);
			match(T__0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Impresion2Context extends ParserRuleContext {
		public Impresion2Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_impresion2; }
	 
		public Impresion2Context() { }
		public void copyFrom(Impresion2Context ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class Imprechad2Context extends Impresion2Context {
		public TerminalNode PRINT() { return getToken(TraductorCParser.PRINT, 0); }
		public TerminalNode PA() { return getToken(TraductorCParser.PA, 0); }
		public TerminalNode STRING() { return getToken(TraductorCParser.STRING, 0); }
		public TerminalNode PC() { return getToken(TraductorCParser.PC, 0); }
		public Imprechad2Context(Impresion2Context ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TraductorCVisitor ) return ((TraductorCVisitor<? extends T>)visitor).visitImprechad2(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Impresion2Context impresion2() throws RecognitionException {
		Impresion2Context _localctx = new Impresion2Context(_ctx, getState());
		enterRule(_localctx, 10, RULE_impresion2);
		try {
			_localctx = new Imprechad2Context(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(64);
			match(PRINT);
			setState(65);
			match(PA);
			setState(66);
			match(STRING);
			setState(67);
			match(PC);
			setState(68);
			match(T__0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ImpresionContext extends ParserRuleContext {
		public ImpresionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_impresion; }
	 
		public ImpresionContext() { }
		public void copyFrom(ImpresionContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class ImprechadContext extends ImpresionContext {
		public TerminalNode PRINT() { return getToken(TraductorCParser.PRINT, 0); }
		public TerminalNode PA() { return getToken(TraductorCParser.PA, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode PC() { return getToken(TraductorCParser.PC, 0); }
		public ImprechadContext(ImpresionContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TraductorCVisitor ) return ((TraductorCVisitor<? extends T>)visitor).visitImprechad(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ImpresionContext impresion() throws RecognitionException {
		ImpresionContext _localctx = new ImpresionContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_impresion);
		try {
			_localctx = new ImprechadContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(70);
			match(PRINT);
			setState(71);
			match(PA);
			setState(72);
			expr(0);
			setState(73);
			match(PC);
			setState(74);
			match(T__0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AsignacionContext extends ParserRuleContext {
		public AsignacionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_asignacion; }
	 
		public AsignacionContext() { }
		public void copyFrom(AsignacionContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class AsignachadContext extends AsignacionContext {
		public TerminalNode ID() { return getToken(TraductorCParser.ID, 0); }
		public TerminalNode IGUAL() { return getToken(TraductorCParser.IGUAL, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public AsignachadContext(AsignacionContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TraductorCVisitor ) return ((TraductorCVisitor<? extends T>)visitor).visitAsignachad(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AsignacionContext asignacion() throws RecognitionException {
		AsignacionContext _localctx = new AsignacionContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_asignacion);
		try {
			_localctx = new AsignachadContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(76);
			match(ID);
			setState(77);
			match(IGUAL);
			setState(78);
			expr(0);
			setState(79);
			match(T__0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IfCuckContext extends ParserRuleContext {
		public IfCuckContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ifCuck; }
	 
		public IfCuckContext() { }
		public void copyFrom(IfCuckContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class IfChadContext extends IfCuckContext {
		public TerminalNode IF() { return getToken(TraductorCParser.IF, 0); }
		public TerminalNode PA() { return getToken(TraductorCParser.PA, 0); }
		public CondicionContext condicion() {
			return getRuleContext(CondicionContext.class,0);
		}
		public TerminalNode PC() { return getToken(TraductorCParser.PC, 0); }
		public TerminalNode LA() { return getToken(TraductorCParser.LA, 0); }
		public InstruccionesContext instrucciones() {
			return getRuleContext(InstruccionesContext.class,0);
		}
		public TerminalNode LC() { return getToken(TraductorCParser.LC, 0); }
		public List<ElseifCuckContext> elseifCuck() {
			return getRuleContexts(ElseifCuckContext.class);
		}
		public ElseifCuckContext elseifCuck(int i) {
			return getRuleContext(ElseifCuckContext.class,i);
		}
		public ElseCuckContext elseCuck() {
			return getRuleContext(ElseCuckContext.class,0);
		}
		public IfChadContext(IfCuckContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TraductorCVisitor ) return ((TraductorCVisitor<? extends T>)visitor).visitIfChad(this);
			else return visitor.visitChildren(this);
		}
	}

	public final IfCuckContext ifCuck() throws RecognitionException {
		IfCuckContext _localctx = new IfCuckContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_ifCuck);
		int _la;
		try {
			int _alt;
			_localctx = new IfChadContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(81);
			match(IF);
			setState(82);
			match(PA);
			setState(83);
			condicion(0);
			setState(84);
			match(PC);
			setState(85);
			match(LA);
			setState(86);
			instrucciones();
			setState(87);
			match(LC);
			setState(91);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(88);
					elseifCuck();
					}
					} 
				}
				setState(93);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
			}
			setState(95);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==ELSE) {
				{
				setState(94);
				elseCuck();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ElseCuckContext extends ParserRuleContext {
		public ElseCuckContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_elseCuck; }
	 
		public ElseCuckContext() { }
		public void copyFrom(ElseCuckContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class ElsechadContext extends ElseCuckContext {
		public TerminalNode ELSE() { return getToken(TraductorCParser.ELSE, 0); }
		public TerminalNode LA() { return getToken(TraductorCParser.LA, 0); }
		public InstruccionesContext instrucciones() {
			return getRuleContext(InstruccionesContext.class,0);
		}
		public TerminalNode LC() { return getToken(TraductorCParser.LC, 0); }
		public ElsechadContext(ElseCuckContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TraductorCVisitor ) return ((TraductorCVisitor<? extends T>)visitor).visitElsechad(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ElseCuckContext elseCuck() throws RecognitionException {
		ElseCuckContext _localctx = new ElseCuckContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_elseCuck);
		try {
			_localctx = new ElsechadContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(97);
			match(ELSE);
			setState(98);
			match(LA);
			setState(99);
			instrucciones();
			setState(100);
			match(LC);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ElseifCuckContext extends ParserRuleContext {
		public ElseifCuckContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_elseifCuck; }
	 
		public ElseifCuckContext() { }
		public void copyFrom(ElseifCuckContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class ElseifChadContext extends ElseifCuckContext {
		public TerminalNode ELSE() { return getToken(TraductorCParser.ELSE, 0); }
		public TerminalNode IF() { return getToken(TraductorCParser.IF, 0); }
		public TerminalNode PA() { return getToken(TraductorCParser.PA, 0); }
		public CondicionContext condicion() {
			return getRuleContext(CondicionContext.class,0);
		}
		public TerminalNode PC() { return getToken(TraductorCParser.PC, 0); }
		public TerminalNode LA() { return getToken(TraductorCParser.LA, 0); }
		public InstruccionesContext instrucciones() {
			return getRuleContext(InstruccionesContext.class,0);
		}
		public TerminalNode LC() { return getToken(TraductorCParser.LC, 0); }
		public ElseifChadContext(ElseifCuckContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TraductorCVisitor ) return ((TraductorCVisitor<? extends T>)visitor).visitElseifChad(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ElseifCuckContext elseifCuck() throws RecognitionException {
		ElseifCuckContext _localctx = new ElseifCuckContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_elseifCuck);
		try {
			_localctx = new ElseifChadContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(102);
			match(ELSE);
			setState(103);
			match(IF);
			setState(104);
			match(PA);
			setState(105);
			condicion(0);
			setState(106);
			match(PC);
			setState(107);
			match(LA);
			setState(108);
			instrucciones();
			setState(109);
			match(LC);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ForBasicoContext extends ParserRuleContext {
		public ForBasicoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_forBasico; }
	 
		public ForBasicoContext() { }
		public void copyFrom(ForBasicoContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class ForChadContext extends ForBasicoContext {
		public TerminalNode FOR() { return getToken(TraductorCParser.FOR, 0); }
		public TerminalNode PA() { return getToken(TraductorCParser.PA, 0); }
		public Declaracion2Context declaracion2() {
			return getRuleContext(Declaracion2Context.class,0);
		}
		public CondicionContext condicion() {
			return getRuleContext(CondicionContext.class,0);
		}
		public IncrementoContext incremento() {
			return getRuleContext(IncrementoContext.class,0);
		}
		public TerminalNode PC() { return getToken(TraductorCParser.PC, 0); }
		public TerminalNode LA() { return getToken(TraductorCParser.LA, 0); }
		public InstruccionesContext instrucciones() {
			return getRuleContext(InstruccionesContext.class,0);
		}
		public TerminalNode LC() { return getToken(TraductorCParser.LC, 0); }
		public ForChadContext(ForBasicoContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TraductorCVisitor ) return ((TraductorCVisitor<? extends T>)visitor).visitForChad(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ForBasicoContext forBasico() throws RecognitionException {
		ForBasicoContext _localctx = new ForBasicoContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_forBasico);
		try {
			_localctx = new ForChadContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(111);
			match(FOR);
			setState(112);
			match(PA);
			setState(113);
			declaracion2();
			setState(114);
			condicion(0);
			setState(115);
			match(T__0);
			setState(116);
			incremento();
			setState(117);
			match(PC);
			setState(118);
			match(LA);
			setState(119);
			instrucciones();
			setState(120);
			match(LC);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
